<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hpbg">

    <!-- Dragon Image -->


    <ImageView
        android:id="@+id/dragon_image"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/dragon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_button"
        style="@style/ButtonBlack"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/minecraft"
        android:text="@string/start"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dragon_image" />

    <Button
        android:id="@+id/new_game_button"
        style="@style/ButtonBlack"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/minecraft"
        android:text="@string/new_game"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <Button
        android:id="@+id/high_score_button"
        style="@style/ButtonBlack"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/minecraft"
        android:text="@string/high_score"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_button" />

    <Button
        android:id="@+id/settings_button"
        style="@style/ButtonBlack"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/minecraft"
        android:text="@string/settings"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_score_button" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/minecraft"
        android:text="@string/rider"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
